lex.output
Terminaux inutilisés dans la grammaire

    tCOMP
    tERROR
    TYPE
    PROFONDEUR
    ADDRESS
    tTID


État 76 conflits: 1 réduction/réduction
État 109 conflits: 4 décalage/réduction
État 110 conflits: 4 décalage/réduction
État 111 conflits: 4 décalage/réduction
État 112 conflits: 4 décalage/réduction


Grammaire

    0 $accept: Program $end

    1 Program: Statement

    2 Statement: Statement Main
    3          | Fonction
    4          | Main
    5          | Statement Fonction

    6 $@1: %empty

    7 $@2: %empty

    8 Fonction: tINT tID incr_prof $@1 Declaration tLBRACE Body Return $@2 tSEMI tRBRACE

    9 $@3: %empty

   10 Fonction: tVOID tID $@3 Declaration tLBRACE Body tRBRACE

   11 Declaration: tLPAR Args tRPAR

   12 $@4: %empty

   13 Main: tINT tMain $@4 tLPAR tRPAR tLBRACE Body Return tSEMI tRBRACE

   14 $@5: %empty

   15 $@6: %empty

   16 Main: tVOID $@5 tMain $@6 incr_prof tLPAR tRPAR tLBRACE Body tRBRACE

   17 $@7: %empty

   18 Main: tMain $@7 tLPAR tRPAR tLBRACE Body tRBRACE

   19 Args: %empty
   20     | tINT tID

   21 $@8: %empty

   22 Args: tINT tID tCOMMA $@8 Args

   23 Body: %empty
   24     | BodyInstru Body
   25     | BodyDec Body

   26 BodyDec: tINT Initialisation tSEMI
   27        | tCONST Initialisationc tSEMI

   28 BodyInstru: Printf BodyInstru
   29           | Affect tSEMI
   30           | incr_prof While decr_prof
   31           | incr_prof If decr_prof

   32 incr_prof: %empty

   33 decr_prof: %empty

   34 Initialisationc: tID
   35                | Affect

   36 $@9: %empty

   37 Call: tID tLPAR $@9 Parametre tRPAR

   38 $@10: %empty

   39 Initialisation: tID tASSIGN $@10 Call

   40 $@11: %empty

   41 Initialisation: tID tASSIGN $@11 Val
   42               | Initialisation tCOMMA Initialisation
   43               | tID

   44 Printf: tPRINT tLPAR Val tRPAR tSEMI

   45 Affect: tID tASSIGN Val

   46 Val: %empty
   47    | tID
   48    | tNB
   49    | Val Operation

   50 $@12: %empty

   51 Operation: tADD Val $@12

   52 $@13: %empty

   53 Operation: tMUL Val $@13

   54 $@14: %empty

   55 Operation: tDIV Val $@14

   56 $@15: %empty

   57 Operation: tSUB Val $@15

   58 LVal: Val
   59     | tLPAR Val tRPAR

   60 Logic: LVal

   61 $@16: %empty

   62 Logic: LVal tEQ LVal $@16

   63 $@17: %empty

   64 Logic: LVal tLT LVal $@17

   65 $@18: %empty

   66 Logic: LVal tGT LVal $@18

   67 $@19: %empty

   68 Logic: LVal tNE LVal $@19

   69 $@20: %empty

   70 Logic: LVal tGE LVal $@20

   71 $@21: %empty

   72 Logic: LVal tLE LVal $@21

   73 $@22: %empty

   74 If: tIF tLPAR Logic tRPAR $@22 BodyCond Else

   75 Else: %empty

   76 $@23: %empty

   77 Else: tELSE $@23 BodyCond

   78 $@24: %empty

   79 While: tWHILE tLPAR LVal tRPAR $@24 BodyCond

   80 BodyCond: tLBRACE Body tRBRACE

   81 Parametre: Val
   82          | Val tCOMMA Parametre

   83 Return: tRETURN tLPAR Val tRPAR
   84       | tRETURN Val


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tIF (258) 74
    tELSE (259) 77
    tWHILE (260) 79
    tPRINT (261) 44
    tRETURN (262) 83 84
    tASSIGN (263) 39 41 45
    tLBRACE (264) 8 10 13 16 18 80
    tRBRACE (265) 8 10 13 16 18 80
    tLPAR (266) 11 13 16 18 37 44 59 74 79 83
    tRPAR (267) 11 13 16 18 37 44 59 74 79 83
    tSEMI (268) 8 13 26 27 29 44
    tCOMMA (269) 22 42 82
    tCOMP (270)
    tERROR (271)
    tCONST (272) 27
    TYPE (273)
    PROFONDEUR (274)
    ADDRESS (275)
    tTID (276)
    tADD (277) 51
    tMUL (278) 53
    tDIV (279) 55
    tSUB (280) 57
    tEQ (281) 62
    tLT (282) 64
    tGT (283) 66
    tNE (284) 68
    tGE (285) 70
    tLE (286) 72
    tNB <num> (287) 48
    tVOID <num> (288) 10 16
    tINT <num> (289) 8 13 20 22 26
    tID <c> (290) 8 10 20 22 34 37 39 41 43 45 47
    tMain <c> (291) 13 16 18


Non-terminaux, suivis des règles où ils apparaissent

    $accept (37)
        à gauche: 0
    Program (38)
        à gauche: 1
        à droite: 0
    Statement (39)
        à gauche: 2 3 4 5
        à droite: 1 2 5
    Fonction (40)
        à gauche: 8 10
        à droite: 3 5
    $@1 (41)
        à gauche: 6
        à droite: 8
    $@2 (42)
        à gauche: 7
        à droite: 8
    $@3 (43)
        à gauche: 9
        à droite: 10
    Declaration (44)
        à gauche: 11
        à droite: 8 10
    Main (45)
        à gauche: 13 16 18
        à droite: 2 4
    $@4 (46)
        à gauche: 12
        à droite: 13
    $@5 (47)
        à gauche: 14
        à droite: 16
    $@6 (48)
        à gauche: 15
        à droite: 16
    $@7 (49)
        à gauche: 17
        à droite: 18
    Args (50)
        à gauche: 19 20 22
        à droite: 11 22
    $@8 (51)
        à gauche: 21
        à droite: 22
    Body (52)
        à gauche: 23 24 25
        à droite: 8 10 13 16 18 24 25 80
    BodyDec (53)
        à gauche: 26 27
        à droite: 25
    BodyInstru (54)
        à gauche: 28 29 30 31
        à droite: 24 28
    incr_prof (55)
        à gauche: 32
        à droite: 8 16 30 31
    decr_prof (56)
        à gauche: 33
        à droite: 30 31
    Initialisationc (57)
        à gauche: 34 35
        à droite: 27
    Call (58)
        à gauche: 37
        à droite: 39
    $@9 (59)
        à gauche: 36
        à droite: 37
    Initialisation (60)
        à gauche: 39 41 42 43
        à droite: 26 42
    $@10 (61)
        à gauche: 38
        à droite: 39
    $@11 (62)
        à gauche: 40
        à droite: 41
    Printf (63)
        à gauche: 44
        à droite: 28
    Affect (64)
        à gauche: 45
        à droite: 29 35
    Val (65)
        à gauche: 46 47 48 49
        à droite: 41 44 45 49 51 53 55 57 58 59 81 82 83 84
    Operation (66)
        à gauche: 51 53 55 57
        à droite: 49
    $@12 (67)
        à gauche: 50
        à droite: 51
    $@13 (68)
        à gauche: 52
        à droite: 53
    $@14 (69)
        à gauche: 54
        à droite: 55
    $@15 (70)
        à gauche: 56
        à droite: 57
    LVal (71)
        à gauche: 58 59
        à droite: 60 62 64 66 68 70 72 79
    Logic (72)
        à gauche: 60 62 64 66 68 70 72
        à droite: 74
    $@16 (73)
        à gauche: 61
        à droite: 62
    $@17 (74)
        à gauche: 63
        à droite: 64
    $@18 (75)
        à gauche: 65
        à droite: 66
    $@19 (76)
        à gauche: 67
        à droite: 68
    $@20 (77)
        à gauche: 69
        à droite: 70
    $@21 (78)
        à gauche: 71
        à droite: 72
    If (79)
        à gauche: 74
        à droite: 31
    $@22 (80)
        à gauche: 73
        à droite: 74
    Else (81)
        à gauche: 75 77
        à droite: 74
    $@23 (82)
        à gauche: 76
        à droite: 77
    While (83)
        à gauche: 79
        à droite: 30
    $@24 (84)
        à gauche: 78
        à droite: 79
    BodyCond (85)
        à gauche: 80
        à droite: 74 77 79
    Parametre (86)
        à gauche: 81 82
        à droite: 37 82
    Return (87)
        à gauche: 83 84
        à droite: 8 13


État 0

    0 $accept: . Program $end

    tVOID  décalage et aller à l'état 1
    tINT   décalage et aller à l'état 2
    tMain  décalage et aller à l'état 3

    Program    aller à l'état 4
    Statement  aller à l'état 5
    Fonction   aller à l'état 6
    Main       aller à l'état 7


État 1

   10 Fonction: tVOID . tID $@3 Declaration tLBRACE Body tRBRACE
   16 Main: tVOID . $@5 tMain $@6 incr_prof tLPAR tRPAR tLBRACE Body tRBRACE

    tID  décalage et aller à l'état 8

    $défaut  réduction par utilisation de la règle 14 ($@5)

    $@5  aller à l'état 9


État 2

    8 Fonction: tINT . tID incr_prof $@1 Declaration tLBRACE Body Return $@2 tSEMI tRBRACE
   13 Main: tINT . tMain $@4 tLPAR tRPAR tLBRACE Body Return tSEMI tRBRACE

    tID    décalage et aller à l'état 10
    tMain  décalage et aller à l'état 11


État 3

   18 Main: tMain . $@7 tLPAR tRPAR tLBRACE Body tRBRACE

    $défaut  réduction par utilisation de la règle 17 ($@7)

    $@7  aller à l'état 12


État 4

    0 $accept: Program . $end

    $end  décalage et aller à l'état 13


État 5

    1 Program: Statement .
    2 Statement: Statement . Main
    5          | Statement . Fonction

    tVOID  décalage et aller à l'état 1
    tINT   décalage et aller à l'état 2
    tMain  décalage et aller à l'état 3

    $défaut  réduction par utilisation de la règle 1 (Program)

    Fonction  aller à l'état 14
    Main      aller à l'état 15


État 6

    3 Statement: Fonction .

    $défaut  réduction par utilisation de la règle 3 (Statement)


État 7

    4 Statement: Main .

    $défaut  réduction par utilisation de la règle 4 (Statement)


État 8

   10 Fonction: tVOID tID . $@3 Declaration tLBRACE Body tRBRACE

    $défaut  réduction par utilisation de la règle 9 ($@3)

    $@3  aller à l'état 16


État 9

   16 Main: tVOID $@5 . tMain $@6 incr_prof tLPAR tRPAR tLBRACE Body tRBRACE

    tMain  décalage et aller à l'état 17


État 10

    8 Fonction: tINT tID . incr_prof $@1 Declaration tLBRACE Body Return $@2 tSEMI tRBRACE

    $défaut  réduction par utilisation de la règle 32 (incr_prof)

    incr_prof  aller à l'état 18


État 11

   13 Main: tINT tMain . $@4 tLPAR tRPAR tLBRACE Body Return tSEMI tRBRACE

    $défaut  réduction par utilisation de la règle 12 ($@4)

    $@4  aller à l'état 19


État 12

   18 Main: tMain $@7 . tLPAR tRPAR tLBRACE Body tRBRACE

    tLPAR  décalage et aller à l'état 20


État 13

    0 $accept: Program $end .

    $défaut  accepter


État 14

    5 Statement: Statement Fonction .

    $défaut  réduction par utilisation de la règle 5 (Statement)


État 15

    2 Statement: Statement Main .

    $défaut  réduction par utilisation de la règle 2 (Statement)


État 16

   10 Fonction: tVOID tID $@3 . Declaration tLBRACE Body tRBRACE

    tLPAR  décalage et aller à l'état 21

    Declaration  aller à l'état 22


État 17

   16 Main: tVOID $@5 tMain . $@6 incr_prof tLPAR tRPAR tLBRACE Body tRBRACE

    $défaut  réduction par utilisation de la règle 15 ($@6)

    $@6  aller à l'état 23


État 18

    8 Fonction: tINT tID incr_prof . $@1 Declaration tLBRACE Body Return $@2 tSEMI tRBRACE

    $défaut  réduction par utilisation de la règle 6 ($@1)

    $@1  aller à l'état 24


État 19

   13 Main: tINT tMain $@4 . tLPAR tRPAR tLBRACE Body Return tSEMI tRBRACE

    tLPAR  décalage et aller à l'état 25


État 20

   18 Main: tMain $@7 tLPAR . tRPAR tLBRACE Body tRBRACE

    tRPAR  décalage et aller à l'état 26


État 21

   11 Declaration: tLPAR . Args tRPAR

    tINT  décalage et aller à l'état 27

    $défaut  réduction par utilisation de la règle 19 (Args)

    Args  aller à l'état 28


État 22

   10 Fonction: tVOID tID $@3 Declaration . tLBRACE Body tRBRACE

    tLBRACE  décalage et aller à l'état 29


État 23

   16 Main: tVOID $@5 tMain $@6 . incr_prof tLPAR tRPAR tLBRACE Body tRBRACE

    $défaut  réduction par utilisation de la règle 32 (incr_prof)

    incr_prof  aller à l'état 30


État 24

    8 Fonction: tINT tID incr_prof $@1 . Declaration tLBRACE Body Return $@2 tSEMI tRBRACE

    tLPAR  décalage et aller à l'état 21

    Declaration  aller à l'état 31


État 25

   13 Main: tINT tMain $@4 tLPAR . tRPAR tLBRACE Body Return tSEMI tRBRACE

    tRPAR  décalage et aller à l'état 32


État 26

   18 Main: tMain $@7 tLPAR tRPAR . tLBRACE Body tRBRACE

    tLBRACE  décalage et aller à l'état 33


État 27

   20 Args: tINT . tID
   22     | tINT . tID tCOMMA $@8 Args

    tID  décalage et aller à l'état 34


État 28

   11 Declaration: tLPAR Args . tRPAR

    tRPAR  décalage et aller à l'état 35


État 29

   10 Fonction: tVOID tID $@3 Declaration tLBRACE . Body tRBRACE

    tPRINT  décalage et aller à l'état 36
    tCONST  décalage et aller à l'état 37
    tINT    décalage et aller à l'état 38
    tID     décalage et aller à l'état 39

    tRBRACE   réduction par utilisation de la règle 23 (Body)
    $défaut  réduction par utilisation de la règle 32 (incr_prof)

    Body        aller à l'état 40
    BodyDec     aller à l'état 41
    BodyInstru  aller à l'état 42
    incr_prof   aller à l'état 43
    Printf      aller à l'état 44
    Affect      aller à l'état 45


État 30

   16 Main: tVOID $@5 tMain $@6 incr_prof . tLPAR tRPAR tLBRACE Body tRBRACE

    tLPAR  décalage et aller à l'état 46


État 31

    8 Fonction: tINT tID incr_prof $@1 Declaration . tLBRACE Body Return $@2 tSEMI tRBRACE

    tLBRACE  décalage et aller à l'état 47


État 32

   13 Main: tINT tMain $@4 tLPAR tRPAR . tLBRACE Body Return tSEMI tRBRACE

    tLBRACE  décalage et aller à l'état 48


État 33

   18 Main: tMain $@7 tLPAR tRPAR tLBRACE . Body tRBRACE

    tPRINT  décalage et aller à l'état 36
    tCONST  décalage et aller à l'état 37
    tINT    décalage et aller à l'état 38
    tID     décalage et aller à l'état 39

    tRBRACE   réduction par utilisation de la règle 23 (Body)
    $défaut  réduction par utilisation de la règle 32 (incr_prof)

    Body        aller à l'état 49
    BodyDec     aller à l'état 41
    BodyInstru  aller à l'état 42
    incr_prof   aller à l'état 43
    Printf      aller à l'état 44
    Affect      aller à l'état 45


État 34

   20 Args: tINT tID .
   22     | tINT tID . tCOMMA $@8 Args

    tCOMMA  décalage et aller à l'état 50

    $défaut  réduction par utilisation de la règle 20 (Args)


État 35

   11 Declaration: tLPAR Args tRPAR .

    $défaut  réduction par utilisation de la règle 11 (Declaration)


État 36

   44 Printf: tPRINT . tLPAR Val tRPAR tSEMI

    tLPAR  décalage et aller à l'état 51


État 37

   27 BodyDec: tCONST . Initialisationc tSEMI

    tID  décalage et aller à l'état 52

    Initialisationc  aller à l'état 53
    Affect           aller à l'état 54


État 38

   26 BodyDec: tINT . Initialisation tSEMI

    tID  décalage et aller à l'état 55

    Initialisation  aller à l'état 56


État 39

   45 Affect: tID . tASSIGN Val

    tASSIGN  décalage et aller à l'état 57


État 40

   10 Fonction: tVOID tID $@3 Declaration tLBRACE Body . tRBRACE

    tRBRACE  décalage et aller à l'état 58


État 41

   25 Body: BodyDec . Body

    tPRINT  décalage et aller à l'état 36
    tCONST  décalage et aller à l'état 37
    tINT    décalage et aller à l'état 38
    tID     décalage et aller à l'état 39

    tIF       réduction par utilisation de la règle 32 (incr_prof)
    tWHILE    réduction par utilisation de la règle 32 (incr_prof)
    $défaut  réduction par utilisation de la règle 23 (Body)

    Body        aller à l'état 59
    BodyDec     aller à l'état 41
    BodyInstru  aller à l'état 42
    incr_prof   aller à l'état 43
    Printf      aller à l'état 44
    Affect      aller à l'état 45


État 42

   24 Body: BodyInstru . Body

    tPRINT  décalage et aller à l'état 36
    tCONST  décalage et aller à l'état 37
    tINT    décalage et aller à l'état 38
    tID     décalage et aller à l'état 39

    tIF       réduction par utilisation de la règle 32 (incr_prof)
    tWHILE    réduction par utilisation de la règle 32 (incr_prof)
    $défaut  réduction par utilisation de la règle 23 (Body)

    Body        aller à l'état 60
    BodyDec     aller à l'état 41
    BodyInstru  aller à l'état 42
    incr_prof   aller à l'état 43
    Printf      aller à l'état 44
    Affect      aller à l'état 45


État 43

   30 BodyInstru: incr_prof . While decr_prof
   31           | incr_prof . If decr_prof

    tIF     décalage et aller à l'état 61
    tWHILE  décalage et aller à l'état 62

    If     aller à l'état 63
    While  aller à l'état 64


État 44

   28 BodyInstru: Printf . BodyInstru

    tPRINT  décalage et aller à l'état 36
    tID     décalage et aller à l'état 39

    $défaut  réduction par utilisation de la règle 32 (incr_prof)

    BodyInstru  aller à l'état 65
    incr_prof   aller à l'état 43
    Printf      aller à l'état 44
    Affect      aller à l'état 45


État 45

   29 BodyInstru: Affect . tSEMI

    tSEMI  décalage et aller à l'état 66


État 46

   16 Main: tVOID $@5 tMain $@6 incr_prof tLPAR . tRPAR tLBRACE Body tRBRACE

    tRPAR  décalage et aller à l'état 67


État 47

    8 Fonction: tINT tID incr_prof $@1 Declaration tLBRACE . Body Return $@2 tSEMI tRBRACE

    tPRINT  décalage et aller à l'état 36
    tCONST  décalage et aller à l'état 37
    tINT    décalage et aller à l'état 38
    tID     décalage et aller à l'état 39

    tRETURN   réduction par utilisation de la règle 23 (Body)
    $défaut  réduction par utilisation de la règle 32 (incr_prof)

    Body        aller à l'état 68
    BodyDec     aller à l'état 41
    BodyInstru  aller à l'état 42
    incr_prof   aller à l'état 43
    Printf      aller à l'état 44
    Affect      aller à l'état 45


État 48

   13 Main: tINT tMain $@4 tLPAR tRPAR tLBRACE . Body Return tSEMI tRBRACE

    tPRINT  décalage et aller à l'état 36
    tCONST  décalage et aller à l'état 37
    tINT    décalage et aller à l'état 38
    tID     décalage et aller à l'état 39

    tRETURN   réduction par utilisation de la règle 23 (Body)
    $défaut  réduction par utilisation de la règle 32 (incr_prof)

    Body        aller à l'état 69
    BodyDec     aller à l'état 41
    BodyInstru  aller à l'état 42
    incr_prof   aller à l'état 43
    Printf      aller à l'état 44
    Affect      aller à l'état 45


État 49

   18 Main: tMain $@7 tLPAR tRPAR tLBRACE Body . tRBRACE

    tRBRACE  décalage et aller à l'état 70


État 50

   22 Args: tINT tID tCOMMA . $@8 Args

    $défaut  réduction par utilisation de la règle 21 ($@8)

    $@8  aller à l'état 71


État 51

   44 Printf: tPRINT tLPAR . Val tRPAR tSEMI

    tNB  décalage et aller à l'état 72
    tID  décalage et aller à l'état 73

    $défaut  réduction par utilisation de la règle 46 (Val)

    Val  aller à l'état 74


État 52

   34 Initialisationc: tID .
   45 Affect: tID . tASSIGN Val

    tASSIGN  décalage et aller à l'état 57

    $défaut  réduction par utilisation de la règle 34 (Initialisationc)


État 53

   27 BodyDec: tCONST Initialisationc . tSEMI

    tSEMI  décalage et aller à l'état 75


État 54

   35 Initialisationc: Affect .

    $défaut  réduction par utilisation de la règle 35 (Initialisationc)


État 55

   39 Initialisation: tID . tASSIGN $@10 Call
   41               | tID . tASSIGN $@11 Val
   43               | tID .

    tASSIGN  décalage et aller à l'état 76

    $défaut  réduction par utilisation de la règle 43 (Initialisation)


État 56

   26 BodyDec: tINT Initialisation . tSEMI
   42 Initialisation: Initialisation . tCOMMA Initialisation

    tSEMI   décalage et aller à l'état 77
    tCOMMA  décalage et aller à l'état 78


État 57

   45 Affect: tID tASSIGN . Val

    tNB  décalage et aller à l'état 72
    tID  décalage et aller à l'état 73

    $défaut  réduction par utilisation de la règle 46 (Val)

    Val  aller à l'état 79


État 58

   10 Fonction: tVOID tID $@3 Declaration tLBRACE Body tRBRACE .

    $défaut  réduction par utilisation de la règle 10 (Fonction)


État 59

   25 Body: BodyDec Body .

    $défaut  réduction par utilisation de la règle 25 (Body)


État 60

   24 Body: BodyInstru Body .

    $défaut  réduction par utilisation de la règle 24 (Body)


État 61

   74 If: tIF . tLPAR Logic tRPAR $@22 BodyCond Else

    tLPAR  décalage et aller à l'état 80


État 62

   79 While: tWHILE . tLPAR LVal tRPAR $@24 BodyCond

    tLPAR  décalage et aller à l'état 81


État 63

   31 BodyInstru: incr_prof If . decr_prof

    $défaut  réduction par utilisation de la règle 33 (decr_prof)

    decr_prof  aller à l'état 82


État 64

   30 BodyInstru: incr_prof While . decr_prof

    $défaut  réduction par utilisation de la règle 33 (decr_prof)

    decr_prof  aller à l'état 83


État 65

   28 BodyInstru: Printf BodyInstru .

    $défaut  réduction par utilisation de la règle 28 (BodyInstru)


État 66

   29 BodyInstru: Affect tSEMI .

    $défaut  réduction par utilisation de la règle 29 (BodyInstru)


État 67

   16 Main: tVOID $@5 tMain $@6 incr_prof tLPAR tRPAR . tLBRACE Body tRBRACE

    tLBRACE  décalage et aller à l'état 84


État 68

    8 Fonction: tINT tID incr_prof $@1 Declaration tLBRACE Body . Return $@2 tSEMI tRBRACE

    tRETURN  décalage et aller à l'état 85

    Return  aller à l'état 86


État 69

   13 Main: tINT tMain $@4 tLPAR tRPAR tLBRACE Body . Return tSEMI tRBRACE

    tRETURN  décalage et aller à l'état 85

    Return  aller à l'état 87


État 70

   18 Main: tMain $@7 tLPAR tRPAR tLBRACE Body tRBRACE .

    $défaut  réduction par utilisation de la règle 18 (Main)


État 71

   22 Args: tINT tID tCOMMA $@8 . Args

    tINT  décalage et aller à l'état 27

    $défaut  réduction par utilisation de la règle 19 (Args)

    Args  aller à l'état 88


État 72

   48 Val: tNB .

    $défaut  réduction par utilisation de la règle 48 (Val)


État 73

   47 Val: tID .

    $défaut  réduction par utilisation de la règle 47 (Val)


État 74

   44 Printf: tPRINT tLPAR Val . tRPAR tSEMI
   49 Val: Val . Operation

    tRPAR  décalage et aller à l'état 89
    tADD   décalage et aller à l'état 90
    tMUL   décalage et aller à l'état 91
    tDIV   décalage et aller à l'état 92
    tSUB   décalage et aller à l'état 93

    Operation  aller à l'état 94


État 75

   27 BodyDec: tCONST Initialisationc tSEMI .

    $défaut  réduction par utilisation de la règle 27 (BodyDec)


État 76

   39 Initialisation: tID tASSIGN . $@10 Call
   41               | tID tASSIGN . $@11 Val

    tID       réduction par utilisation de la règle 38 ($@10)
    tID       [réduction par utilisation de la règle 40 ($@11)]
    $défaut  réduction par utilisation de la règle 40 ($@11)

    $@10  aller à l'état 95
    $@11  aller à l'état 96


État 77

   26 BodyDec: tINT Initialisation tSEMI .

    $défaut  réduction par utilisation de la règle 26 (BodyDec)


État 78

   42 Initialisation: Initialisation tCOMMA . Initialisation

    tID  décalage et aller à l'état 55

    Initialisation  aller à l'état 97


État 79

   45 Affect: tID tASSIGN Val .
   49 Val: Val . Operation

    tADD  décalage et aller à l'état 90
    tMUL  décalage et aller à l'état 91
    tDIV  décalage et aller à l'état 92
    tSUB  décalage et aller à l'état 93

    $défaut  réduction par utilisation de la règle 45 (Affect)

    Operation  aller à l'état 94


État 80

   74 If: tIF tLPAR . Logic tRPAR $@22 BodyCond Else

    tLPAR  décalage et aller à l'état 98
    tNB    décalage et aller à l'état 72
    tID    décalage et aller à l'état 73

    $défaut  réduction par utilisation de la règle 46 (Val)

    Val    aller à l'état 99
    LVal   aller à l'état 100
    Logic  aller à l'état 101


État 81

   79 While: tWHILE tLPAR . LVal tRPAR $@24 BodyCond

    tLPAR  décalage et aller à l'état 98
    tNB    décalage et aller à l'état 72
    tID    décalage et aller à l'état 73

    $défaut  réduction par utilisation de la règle 46 (Val)

    Val   aller à l'état 99
    LVal  aller à l'état 102


État 82

   31 BodyInstru: incr_prof If decr_prof .

    $défaut  réduction par utilisation de la règle 31 (BodyInstru)


État 83

   30 BodyInstru: incr_prof While decr_prof .

    $défaut  réduction par utilisation de la règle 30 (BodyInstru)


État 84

   16 Main: tVOID $@5 tMain $@6 incr_prof tLPAR tRPAR tLBRACE . Body tRBRACE

    tPRINT  décalage et aller à l'état 36
    tCONST  décalage et aller à l'état 37
    tINT    décalage et aller à l'état 38
    tID     décalage et aller à l'état 39

    tRBRACE   réduction par utilisation de la règle 23 (Body)
    $défaut  réduction par utilisation de la règle 32 (incr_prof)

    Body        aller à l'état 103
    BodyDec     aller à l'état 41
    BodyInstru  aller à l'état 42
    incr_prof   aller à l'état 43
    Printf      aller à l'état 44
    Affect      aller à l'état 45


État 85

   83 Return: tRETURN . tLPAR Val tRPAR
   84       | tRETURN . Val

    tLPAR  décalage et aller à l'état 104
    tNB    décalage et aller à l'état 72
    tID    décalage et aller à l'état 73

    $défaut  réduction par utilisation de la règle 46 (Val)

    Val  aller à l'état 105


État 86

    8 Fonction: tINT tID incr_prof $@1 Declaration tLBRACE Body Return . $@2 tSEMI tRBRACE

    $défaut  réduction par utilisation de la règle 7 ($@2)

    $@2  aller à l'état 106


État 87

   13 Main: tINT tMain $@4 tLPAR tRPAR tLBRACE Body Return . tSEMI tRBRACE

    tSEMI  décalage et aller à l'état 107


État 88

   22 Args: tINT tID tCOMMA $@8 Args .

    $défaut  réduction par utilisation de la règle 22 (Args)


État 89

   44 Printf: tPRINT tLPAR Val tRPAR . tSEMI

    tSEMI  décalage et aller à l'état 108


État 90

   51 Operation: tADD . Val $@12

    tNB  décalage et aller à l'état 72
    tID  décalage et aller à l'état 73

    $défaut  réduction par utilisation de la règle 46 (Val)

    Val  aller à l'état 109


État 91

   53 Operation: tMUL . Val $@13

    tNB  décalage et aller à l'état 72
    tID  décalage et aller à l'état 73

    $défaut  réduction par utilisation de la règle 46 (Val)

    Val  aller à l'état 110


État 92

   55 Operation: tDIV . Val $@14

    tNB  décalage et aller à l'état 72
    tID  décalage et aller à l'état 73

    $défaut  réduction par utilisation de la règle 46 (Val)

    Val  aller à l'état 111


État 93

   57 Operation: tSUB . Val $@15

    tNB  décalage et aller à l'état 72
    tID  décalage et aller à l'état 73

    $défaut  réduction par utilisation de la règle 46 (Val)

    Val  aller à l'état 112


État 94

   49 Val: Val Operation .

    $défaut  réduction par utilisation de la règle 49 (Val)


État 95

   39 Initialisation: tID tASSIGN $@10 . Call

    tID  décalage et aller à l'état 113

    Call  aller à l'état 114


État 96

   41 Initialisation: tID tASSIGN $@11 . Val

    tNB  décalage et aller à l'état 72
    tID  décalage et aller à l'état 73

    $défaut  réduction par utilisation de la règle 46 (Val)

    Val  aller à l'état 115


État 97

   42 Initialisation: Initialisation . tCOMMA Initialisation
   42               | Initialisation tCOMMA Initialisation .

    $défaut  réduction par utilisation de la règle 42 (Initialisation)


État 98

   59 LVal: tLPAR . Val tRPAR

    tNB  décalage et aller à l'état 72
    tID  décalage et aller à l'état 73

    $défaut  réduction par utilisation de la règle 46 (Val)

    Val  aller à l'état 116


État 99

   49 Val: Val . Operation
   58 LVal: Val .

    tADD  décalage et aller à l'état 90
    tMUL  décalage et aller à l'état 91
    tDIV  décalage et aller à l'état 92
    tSUB  décalage et aller à l'état 93

    $défaut  réduction par utilisation de la règle 58 (LVal)

    Operation  aller à l'état 94


État 100

   60 Logic: LVal .
   62      | LVal . tEQ LVal $@16
   64      | LVal . tLT LVal $@17
   66      | LVal . tGT LVal $@18
   68      | LVal . tNE LVal $@19
   70      | LVal . tGE LVal $@20
   72      | LVal . tLE LVal $@21

    tEQ  décalage et aller à l'état 117
    tLT  décalage et aller à l'état 118
    tGT  décalage et aller à l'état 119
    tNE  décalage et aller à l'état 120
    tGE  décalage et aller à l'état 121
    tLE  décalage et aller à l'état 122

    $défaut  réduction par utilisation de la règle 60 (Logic)


État 101

   74 If: tIF tLPAR Logic . tRPAR $@22 BodyCond Else

    tRPAR  décalage et aller à l'état 123


État 102

   79 While: tWHILE tLPAR LVal . tRPAR $@24 BodyCond

    tRPAR  décalage et aller à l'état 124


État 103

   16 Main: tVOID $@5 tMain $@6 incr_prof tLPAR tRPAR tLBRACE Body . tRBRACE

    tRBRACE  décalage et aller à l'état 125


État 104

   83 Return: tRETURN tLPAR . Val tRPAR

    tNB  décalage et aller à l'état 72
    tID  décalage et aller à l'état 73

    $défaut  réduction par utilisation de la règle 46 (Val)

    Val  aller à l'état 126


État 105

   49 Val: Val . Operation
   84 Return: tRETURN Val .

    tADD  décalage et aller à l'état 90
    tMUL  décalage et aller à l'état 91
    tDIV  décalage et aller à l'état 92
    tSUB  décalage et aller à l'état 93

    $défaut  réduction par utilisation de la règle 84 (Return)

    Operation  aller à l'état 94


État 106

    8 Fonction: tINT tID incr_prof $@1 Declaration tLBRACE Body Return $@2 . tSEMI tRBRACE

    tSEMI  décalage et aller à l'état 127


État 107

   13 Main: tINT tMain $@4 tLPAR tRPAR tLBRACE Body Return tSEMI . tRBRACE

    tRBRACE  décalage et aller à l'état 128


État 108

   44 Printf: tPRINT tLPAR Val tRPAR tSEMI .

    $défaut  réduction par utilisation de la règle 44 (Printf)


État 109

   49 Val: Val . Operation
   51 Operation: tADD Val . $@12

    tADD  décalage et aller à l'état 90
    tMUL  décalage et aller à l'état 91
    tDIV  décalage et aller à l'état 92
    tSUB  décalage et aller à l'état 93

    tADD      [réduction par utilisation de la règle 50 ($@12)]
    tMUL      [réduction par utilisation de la règle 50 ($@12)]
    tDIV      [réduction par utilisation de la règle 50 ($@12)]
    tSUB      [réduction par utilisation de la règle 50 ($@12)]
    $défaut  réduction par utilisation de la règle 50 ($@12)

    Operation  aller à l'état 94
    $@12       aller à l'état 129


État 110

   49 Val: Val . Operation
   53 Operation: tMUL Val . $@13

    tADD  décalage et aller à l'état 90
    tMUL  décalage et aller à l'état 91
    tDIV  décalage et aller à l'état 92
    tSUB  décalage et aller à l'état 93

    tADD      [réduction par utilisation de la règle 52 ($@13)]
    tMUL      [réduction par utilisation de la règle 52 ($@13)]
    tDIV      [réduction par utilisation de la règle 52 ($@13)]
    tSUB      [réduction par utilisation de la règle 52 ($@13)]
    $défaut  réduction par utilisation de la règle 52 ($@13)

    Operation  aller à l'état 94
    $@13       aller à l'état 130


État 111

   49 Val: Val . Operation
   55 Operation: tDIV Val . $@14

    tADD  décalage et aller à l'état 90
    tMUL  décalage et aller à l'état 91
    tDIV  décalage et aller à l'état 92
    tSUB  décalage et aller à l'état 93

    tADD      [réduction par utilisation de la règle 54 ($@14)]
    tMUL      [réduction par utilisation de la règle 54 ($@14)]
    tDIV      [réduction par utilisation de la règle 54 ($@14)]
    tSUB      [réduction par utilisation de la règle 54 ($@14)]
    $défaut  réduction par utilisation de la règle 54 ($@14)

    Operation  aller à l'état 94
    $@14       aller à l'état 131


État 112

   49 Val: Val . Operation
   57 Operation: tSUB Val . $@15
